--- a/ClinicaOdontologica/ClinicaOdontologicaC3/ClinicaOdontologicaC3/src/main/resources/static/get_pacientes.html
+++ b/ClinicaOdontologica/ClinicaOdontologicaC3/ClinicaOdontologicaC3/src/main/resources/static/get_pacientes.html
@@ -9,20 +9,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/get_pacientes.js"></script>
-    <script type="text/javascript" src="/js/update_odontologo.js"></script>
-    <script type="text/javascript" src="/js/delete_odontologo.js"></script>
+    <script type="text/javascript" src="/js/put_pacientes.js"></script>
+    <script type="text/javascript" src="/js/delete_pacientes.js"></script>
 </head>
 <body>
+<div>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">Home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
                             Pacientes
                         </a>
                         <ul class="dropdown-menu">
@@ -30,31 +31,39 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
                             Odontologos
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./post_odontolgo.html">Guardar</a></li>
+                            <li><a class="dropdown-item" href="post_odontolgo.html">Guardar</a></li>
                             <li><a class="dropdown-item" href="./get_odontologo.html">Listar</a></li>
-
 
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
                             Turnos
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Guardar</a></li>
-                            <li><a class="dropdown-item" href="#">Listar</a></li>
+                            <li><a class="dropdown-item" href="./post_turno.html">Guardar</a></li>
+                            <li><a class="dropdown-item" href="get_turno.html">Listar</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+</div>
     <div class="container">
-       <div id="div_paciente_table">
+        <ul class="nav nav-pills mt-3">
+            <li class="nav-item">
+                <a class="nav-link" href="/post_pacientes.html">Agregar paciente</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/get_pacientes.html/">Actualizar</a>
+            </li>
+        </ul>
+       <div id="div_paciente_table mt-3">
         <h1>Lista de Pacientes</h1>
         <div class="row col-md-10 table-responsive">
             <table id="pacienteTable" class="table table-striped">
@@ -69,6 +78,7 @@
                     <th>Email</th>
                     <th>Actualizar</th>
                     <th>ELiminar</th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody id="pacienteTableBody">
@@ -80,26 +90,48 @@
     <div class="row">
         <div class="col-sm-6" style="display: none;
 											background-color:#e6fffa; padding:10px; border-radius:3px"
-             id="div_pelicula_updating">
-            <form id="update_pelicula_form">
+             id="div_paciente_put">
+            <form id="put_paciente">
                 <div class="form-group">
                     <label >Id:</label>
-                    <input type="text" class="form-control" id="pelicula_id" readonly>
+                    <input type="text" class="form-control" id="paciente_id" readonly>
                 </div>
                 <div class="form-group">
-                    <label >Titulo:</label>
-                    <input type="text" class="form-control" placeholder="titulo" id="titulo">
+                    <label >Nombre:</label>
+                    <input type="text" class="form-control" placeholder="nombre" id="nombre">
                 </div>
                 <div class="form-group">
-                    <label >Categoria:</label>
-                    <input type="text" class="form-control" placeholder="categoria" id="categoria">
+                    <label >Apellido:</label>
+                    <input type="text" class="form-control" placeholder="apellido" id="apellido">
                 </div>
                 <div class="form-group">
-                    <label >Cant. premios:</label>
-                    <input type="text" class="form-control" placeholder="premios" id="premios">
+                    <label >Cedula:</label>
+                    <input type="text" class="form-control" placeholder="cedula" id="cedula">
                 </div>
-
-
+                <div class="form-group">
+                    <label >Fecha de Ingreso:</label>
+                    <input type="date" class="form-control" placeholder="fechaIngreso" id="fechaIngreso">
+                </div>
+                <div class="form-group">
+                    <label>Calle:</label>
+                    <input type="text" class="form-control" placeholder="calle" id="calle">
+                </div>
+                <div class="form-group">
+                    <label>Número:</label>
+                    <input type="text" class="form-control" placeholder="número" id="numero">
+                </div>
+                <div class="form-group">
+                    <label>Localidad:</label>
+                    <input type="text" class="form-control" placeholder="localidad" id="localidad">
+                </div>
+                <div class="form-group">
+                    <label>Provincia:</label>
+                    <input type="text" class="form-control" placeholder="provincia" id="provincia">
+                </div>
+                <div class="form-group">
+                    <label >Email:</label>
+                    <input type="text" class="form-control" placeholder="email" id="email">
+                </div>
                 <button type="submit" class="btn btn-primary">Modificar</button>
             </form>
             <div id="response" style="display:none; margin:10px">
