--- a/ClinicaOdontologica/ClinicaOdontologicaC3/ClinicaOdontologicaC3/src/main/resources/static/index.html
+++ b/ClinicaOdontologica/ClinicaOdontologicaC3/ClinicaOdontologicaC3/src/main/resources/static/index.html
@@ -2,24 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Odontology</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        .hero-image {
+            background-image: url('https://www.sabervivir.es/media/k2/items/cache/9d87a069489f64950d5506595641a422_XL.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 600px;
+            color:  #003366;
+            display:  flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            font-size: 3rem;
+            padding: 60px;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">Home</a>
+        <a class="navbar-brand" href="./index.html">Odontology</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                  <li class="nav-item dropdown">
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Pacientes
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="./post_pacientes.html">Guardar</a></li>
+                        <li><a class="dropdown-item" href="post_pacientes.html">Guardar</a></li>
                         <li><a class="dropdown-item" href="get_pacientes.html">Listar</a></li>
                     </ul>
                 </li>
@@ -37,14 +53,19 @@
                         Turnos
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Guardar</a></li>
-                        <li><a class="dropdown-item" href="#">Listar</a></li>
+                        <li><a class="dropdown-item" href="./post_turno.html">Guardar</a></li>
+                        <li><a class="dropdown-item" href="get_turno.html">Listar</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
+<div class="hero-image">
+    <h1>Bienvenido a la Clínica Odontológica</h1>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
