--- a/ClinicaOdontologica/ClinicaOdontologicaC3/ClinicaOdontologicaC3/src/main/resources/static/post_odontolgo.html
+++ b/ClinicaOdontologica/ClinicaOdontologicaC3/ClinicaOdontologicaC3/src/main/resources/static/post_odontolgo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Pelicula</title>
+    <title>Odontologo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -20,16 +20,16 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
                         Pacientes
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./post_paciente.html">Guardar</a></li>
-                        <li><a class="dropdown-item" href="./get_paciente.html">Listar</a></li>
+                        <li><a class="dropdown-item" href="get_paciente.html">Listar</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
                         Odontologos
                     </a>
                     <ul class="dropdown-menu">
@@ -37,12 +37,12 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
                         Turnos
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Guardar</a></li>
-                        <li><a class="dropdown-item" href="#">Listar</a></li>
+                        <li><a class="dropdown-item" href="./post_turno.html">Guardar</a></li>
+                        <li><a class="dropdown-item" href="get_turno.html">Listar</a></li>
                     </ul>
                 </li>
             </ul>
@@ -50,9 +50,13 @@
     </div>
 </nav>
 <div class="container">
-
-    <div class="row">
-        <div class="col-sm-7" style="background-color:#e6fffa; padding:10px; border-radius:3px">
+    <ul class="nav nav-pills mt-3">
+        <li class="nav-item">
+            <a class="nav-link" href="get_odontologo.html">Listar odontologos</a>
+        </li>
+    </ul>
+    <div class="row mt-3">
+        <div class="col-sm-7 bg-info text-white p-3 rounded">
             <h3>Agregar Odontologo</h3>
             <form id="add_new_odontologo">
                 <div class="form-group">
@@ -75,11 +79,10 @@
                            name="matricula" required></input>
                 </div>
 
-
                 <button type="submit" class="btn btn-danger"
                         id="btn-add-new-odontologo">Guardar</button>
             </form>
-            <div id="response" style="display:none; margin-top:10px">
+            <div id="response" class="mt-3" style="display:none;">
             </div>
         </div>
     </div>
