--- a/ClinicaOdontologica/ClinicaOdontologicaC3/ClinicaOdontologicaC3/src/main/resources/static/post_pacientes.html
+++ b/ClinicaOdontologica/ClinicaOdontologicaC3/ClinicaOdontologicaC3/src/main/resources/static/post_pacientes.html
@@ -14,109 +14,91 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">Home</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
                         Pacientes
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="get_odontologo.html">Listar</a></li>
+                        <li><a class="dropdown-item" href="get_pacientes.html">Listar</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
                         Odontologos
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./post_odontolgo.html">Guardar</a></li>
-                        <li><a class="dropdown-item" href="./get_odontologo.html">Listar</a></li>
+                        <li><a class="dropdown-item" href="get_odontologo.html">Listar</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
                         Turnos
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Guardar</a></li>
-                        <li><a class="dropdown-item" href="#">Listar</a></li>
+                        <li><a class="dropdown-item" href="./post_turno.html">Guardar</a></li>
+                        <li><a class="dropdown-item" href="get_turno.html">Listar</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-<div class="container">
 
-    <div class="row">
-        <div class="col-sm-7" style="background-color:#e6fffa; padding:10px; border-radius:3px">
+<div class="container">
+    <ul class="nav nav-pills mt-3">
+        <li class="nav-item">
+            <a class="nav-link" href="get_pacientes.html">Listar pacientes</a>
+        </li>
+    </ul>
+    <div class="row mt-3">
+        <div class="col-sm-7 bg-info text-white p-3 rounded">
             <h3>Agregar Paciente</h3>
             <form id="add_new_paciente">
                 <div class="form-group">
                     <label class="control-label" for="nombre">Nombre:</label>
-                    <input type="text" class="form-control" id="nombre"
-                           placeholder="Ingrese el nombre:"
-                           name="nombre" required></input>
+                    <input type="text" class="form-control" id="nombre" placeholder="Ingrese el nombre:" name="nombre" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="apellido">Apellido:</label>
-                    <input type="text" class="form-control" id="apellido"
-                           placeholder="Ingrese el Apellido: "
-                           name="apellido" required></input>
+                    <input type="text" class="form-control" id="apellido" placeholder="Ingrese el Apellido:" name="apellido" required>
                 </div>
-
                 <div class="form-group">
                     <label class="control-label" for="cedula">Cedula:</label>
-                    <input type="text" class="form-control" id="cedula"
-                           placeholder="Ingrese Cedula:"
-                           name="cedula" required></input>
+                    <input type="text" class="form-control" id="cedula" placeholder="Ingrese Cedula:" name="cedula" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="fechaIngreso">Fecha Ingreso:</label>
-                    <input type="date" class="form-control" id="fechaIngreso"
-                           placeholder="Ingrese fecha de Ingreso:"
-                           name="fechaIngreso" required></input>
+                    <input type="date" class="form-control" id="fechaIngreso" name="fechaIngreso" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="calle">Calle:</label>
-                    <input type="text" class="form-control" id="calle"
-                           placeholder="Ingrese Calle:"
-                           name="calle" required></input>
+                    <input type="text" class="form-control" id="calle" placeholder="Ingrese Calle:" name="calle" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="numero">Numero:</label>
-                    <input type="text" class="form-control" id="numero"
-                           placeholder="Ingrese numeracion:"
-                           name="numero" required></input>
+                    <input type="number" class="form-control" id="numero" placeholder="Ingrese numeración:" name="numero" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="localidad">Localidad:</label>
-                    <input type="text" class="form-control" id="localidad"
-                           placeholder="Ingrese Localidad:"
-                           name="localidad" required></input>
+                    <input type="text" class="form-control" id="localidad" placeholder="Ingrese Localidad:" name="localidad" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="provincia">Provincia:</label>
-                    <input type="text" class="form-control" id="provincia"
-                           placeholder="Ingrese Provincia:"
-                           name="provincia" required></input>
+                    <input type="text" class="form-control" id="provincia" placeholder="Ingrese Provincia:" name="provincia" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="email">Email:</label>
-                    <input type="text" class="form-control" id="email"
-                           placeholder="Ingrese correo electronico:"
-                           name="email" required></input>
+                    <input type="text" class="form-control" id="email" placeholder="Ingrese correo electrónico:" name="email" required>
                 </div>
-
-
-                <button type="submit" class="btn btn-danger"
-                        id="btn-add-new-paciente">Guardar</button>
+                <button type="submit" class="btn btn-danger" id="btn-add-new-paciente">Guardar</button>
             </form>
-            <div id="response" style="display:none; margin-top:10px">
-            </div>
+            <div id="response" class="mt-3" style="display:none;"></div>
         </div>
     </div>
 </div>
