--- a/ClinicaOdontologica/ClinicaOdontologicaC3/ClinicaOdontologicaC3/src/main/resources/static/get_odontologo.html
+++ b/ClinicaOdontologica/ClinicaOdontologicaC3/ClinicaOdontologicaC3/src/main/resources/static/get_odontologo.html
@@ -16,7 +16,7 @@
 <div>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">Home</a>
+            <a class="navbar-brand" href="/">Home</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
